/*******************************************************************************
 *                                                                             *
 *                Copyright Â© 2015 - 2019 Subterranean Security                *
 *                                                                             *
 *  Licensed under the Apache License, Version 2.0 (the "License");            *
 *  you may not use this file except in compliance with the License.           *
 *  You may obtain a copy of the License at                                    *
 *                                                                             *
 *      http://www.apache.org/licenses/LICENSE-2.0                             *
 *                                                                             *
 *  Unless required by applicable law or agreed to in writing, software        *
 *  distributed under the License is distributed on an "AS IS" BASIS,          *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   *
 *  See the License for the specific language governing permissions and        *
 *  limitations under the License.                                             *
 *                                                                             *
 ******************************************************************************/
syntax = "proto2";

package pojo;

option java_package = "com.sandpolis.core.proto.pojo";
option optimize_for = CODE_SIZE;

/**
 * The configuration of a User.
 */
message UserConfig {

    // The primary ID
    optional int64 id = 1;

    // The username
    optional string username = 2;

    // The password
    optional string password = 3;

    // The email address
    optional string email = 4;

    // The expiration timestamp
    optional int64 expiration = 5;
}

/**
 * User statistics.
 */
message UserStats {

    // The creation timestamp
    optional int64 ctime = 1;
}

/**
 * A User container.
 */
message ProtoUser {
    optional UserConfig config = 1;
    optional UserStats stats = 2;
}
