/*******************************************************************************
 *                                                                             *
 *                Copyright Â© 2015 - 2019 Subterranean Security                *
 *                                                                             *
 *  Licensed under the Apache License, Version 2.0 (the "License");            *
 *  you may not use this file except in compliance with the License.           *
 *  You may obtain a copy of the License at                                    *
 *                                                                             *
 *      http://www.apache.org/licenses/LICENSE-2.0                             *
 *                                                                             *
 *  Unless required by applicable law or agreed to in writing, software        *
 *  distributed under the License is distributed on an "AS IS" BASIS,          *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   *
 *  See the License for the specific language governing permissions and        *
 *  limitations under the License.                                             *
 *                                                                             *
 ******************************************************************************/
syntax = "proto3";

package util;

option java_package = "com.sandpolis.core.proto.util";
option optimize_for = CODE_SIZE;

/**
 * A representation of the final result of some generic action.
 */
message Outcome {

    // The result of the action
    bool result = 1;

    // A comment on the result
    string comment = 2;

    // The duration of the action in milliseconds
    int64 time = 3;

    // An action name
    string action = 4;

    // An exception in standard Java format
    string exception = 5;

    // A predefined error code
    ErrorCode error = 6;
}

/**
 * An enumeration of universal error codes.
 */
enum ErrorCode {
    // No error
    OK = 0;

    // Access was denied
    ACCESS_DENIED = 10;

    // The username did not meet requirements
    INVALID_USERNAME = 100;

    // The password did not meet requirements
    INVALID_PASSWORD = 101;

    // The email address did not meet requirements
    INVALID_EMAIL = 102;

    // The port number did not meet requirements
    INVALID_PORT = 103;

    // The X509 certificate did not meet requirements
    INVALID_CERTIFICATE = 104;

    // The key did not meet requirements
    INVALID_KEY = 105;

    // The IP address did not meet requirements
    INVALID_ADDRESS = 106;

    // The authentication group name did not meet requirements
    INVALID_GROUPNAME = 107;

    // The ID did not meet requirements
    INVALID_ID = 108;

    // The nonce did not meet requirements
    INVALID_NONCE = 109;

    // The listener's state did not meet requirements
    INVALID_LISTENER_STATE = 110;

    // The user could not be found
    UNKNOWN_USER = 200;

    // The group could not be found
    UNKNOWN_GROUP = 201;

    // The listener could not be found
    UNKNOWN_LISTENER = 202;

    // The key challenge failed
    FAILURE_KEY_CHALLENGE = 300;
}
